plotter improvements